MDEV-6393: ANALYZE SELECT crashes ... Don't try printing EXPLAIN if we had an error.